tests/en/errors/ret_mismatch.salam
// EXPECT: E002
func f() i32: ret "no" end
func main: end
